<resources>
    <!-- Change this to your app key -->
    <string name="APP_KEY">phrrm9jymdp29t3</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="app_name">Teleprompter</string>
    <string name="sharedPreferenceName">com.example.valdio.dropboxintegration</string>
    <string name="valid_font_size_prompt">Please enter a valid font size</string>
    <string name="log_in">Log in</string>
    <string name="enter_text_size">Enter text size</string>
    <string name="enter_font_size">Enter font size</string>
    <string name="enter_num_lines_to_scroll">Enter num lines to scroll</string>
    <string name="enter_num_lines">Enter num lines</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="valid_number">Please enter a valid number</string>
    <string name="save_file_to_device">Save file to device</string>
    <string name="your_text_will_appear_this_big">Your text will appear this big</string>
    <string name="mirror_mode">Mirror Mode</string>
    <string name="enter_file_title">Enter file title</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="theme">Theme</string>
    <string name="upload_files_to_dropbox">Upload files to dropbox</string>

</resources>
